# promptguard_final

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.ml  Dockerfile.web  docker-compose.yml  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/api/: jest.config.js  package-lock.json  package.json  tsconfig.json
apps/api/prisma/: dev.db  schema.prisma  seed.js
apps/api/src/: app.module.ts  main.ts
apps/api/test/: analyze.e2e.spec.ts
apps/chrome-extension/: README.md  asconfig.json  package-lock.json  package.json
apps/web/: index.html  package-lock.json  package.json
config/: settings.py
docs/: DEVELOPER_GUIDE.md  PromptGuard_v2_Feature_Specification.docx  PromptGuard_v2_개발자_가이드.docx  PromptGuard_v2_기능명세서.docx  USER_GUIDE.md
examples/: sample_ambiguity_dataset.json  sample_injection_dataset.csv
scripts/: auto_run.py  download_data.py  eval_pattern.py  evaluate.py  preprocess.py  serve.py  setup_ml.py  test_rule_engine.py  train.py
src/api/: app.py  routes.py  schemas.py
src/auto_engine/: __init__.py  loader.py  optimizer.py  pattern_evaluator.py  pipeline.py
src/collectors/: __init__.py  ambig_qa.py  ask_cq.py  base.py  clamber.py  pint_benchmark.py  prompt_leakage.py  raccoon_bench.py  tensor_trust.py
src/inference/: scorer.py
src/preprocessing/: __init__.py  benign_samples.py  korean_injection_samples.py  normalizers.py  schema.py  splitter.py
src/rule_engine/: __init__.py  rules.py
src/training/: metrics.py  trainer.py
(+66 files in other folders)
